5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1747_3093.log
== TEST (2019-05-16 11:13:57) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

emp = 1
vit = 3
t = 0 

while(r =! "X"):
	r = input("resultado V/D/E?: ").upper()
	

-- ERROR:
File "XXXX", line 7
    while(r =! "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:17:29) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

emp = 1
vit = 3
t = 0 

while(r =! "X"):
	if (r == "V"):
		vit = vit +1
		print(vit)
	if (r == "E"):
		emp = emp + 1
		print(emp)
	

-- ERROR:
File "XXXX", line 7
    while(r =! "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:24) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

emp = 1
vit = 3
t = 0 

while(r =! "X"):
	if (r == "V"):
		vit = vit +1
		print(vit)
	elif (r == "E"):
		emp = emp + 1
		print(emp)
	

-- ERROR:
File "XXXX", line 7
    while(r =! "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:39) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

emp = 1
vit = 3


while(r =! "X"):
		vit = vit +1
		print(vit)
		emp = emp + 1
		print(emp)
	

-- ERROR:
File "XXXX", line 7
    while(r =! "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:49) 
-- CODE:
r = input("resultado V/D/E?: ")

emp = 1
vit = 3


while(r =! "X"):
		vit = vit +1
		print(vit)
		emp = emp + 1
		print(emp)
	

-- ERROR:
File "XXXX", line 7
    while(r =! "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:58) 
-- CODE:
r = input("resultado V/D/E?: ")

emp = 1
vit = 3


while(r =! "X"):
		vit = vit +1
		print(vit)
	
	

-- ERROR:
File "XXXX", line 7
    while(r =! "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:19:00) 
-- CODE:
r = input("resultado V/D/E?: ")

emp = 1
vit = 3


while(r =! "X"):
		vit = vit +1
		print(vit)
	
	

-- ERROR:
File "XXXX", line 7
    while(r =! "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:19:44) 
-- CODE:
r = input("resultado V/D/E?: ")

emp = 1
vit = 3


while(r =! "X"):
		vit = vit +1
		print(vit)
	
	

-- ERROR:
File "XXXX", line 7
    while(r =! "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:19:57) 
-- CODE:
r = input("resultado V/D/E?: ")

emp = 1
vit = 3


while(r =! "X"):
		vit = vit +1
		print(vit)
	
	

-- ERROR:
File "XXXX", line 7
    while(r =! "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:20:07) 
-- CODE:
r = input("resultado V/D/E?: ")

emp = 1
vit = 3


while(r != "X"):
		vit = vit +1
		print(vit)
	
	

-- OUTPUT:
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
278
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:33) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

emp = 1
vit = 3


while(r != "X"):
		if (r == "V"):
		vit = vit + 1
		elif (r == "E"):
			emp = emp + 1
	
print(vit)
print(emp)

-- ERROR:
File "XXXX", line 9
    vit = vit + 1
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:48) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

emp = 1
vit = 3


while(r != "X"):
		if (r == "V"):
			vit = vit + 1
		elif (r == "E"):
			emp = emp + 1
	
print(vit)
print(emp)

-- ERROR:
File "XXXX", line 9
    vit = vit + 1
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:23:06) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

emp = 1
vit = 3


while(r != "X"):
		if (r == "V"):
			vit = vit + 1
		elif (r == "E"):
			emp = emp + 1
	
print(vit)
print(emp)

-- ERROR:
File "XXXX", line 9
    vit = vit + 1
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:23:12) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

emp = 1
vit = 3


while(r != "X"):
		if (r == "V"):
			vit = vit + 1
		elif (r == "E"):
			emp = emp + 1
	
	print(vit)
	print(emp)

-- ERROR:
File "XXXX", line 13
    print(vit)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:23:34) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

emp = 1
vit = 3


while(r != "X"):
		if (r == "V"):
			vit = vit + 1
			print(vit)
		elif (r == "E"):
			emp = emp + 1
			print(emp)

-- OUTPUT:
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
278
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:03) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

emp = 1
vit = 3
soma = 0

while(r != "X"):
		if (r == "V"):
			vit = 3 * soma
			soma = soma + 1
			print(vit)
		if (r == "E"):
			emp = 1 * soma
			soma = soma + 1
			print(emp)
-- OUTPUT:
0
3
6
9
12
15
18
21
24
27
30
33
36
39
42
45
48
51
54
57
60
63
66
69
72
75
78
81
84
87
90
93
96
99
102
105
108
111
114
117
120
123
126
129
132
135
138
141
144
147
150
153
156
159
162
165
168
171
174
177
180
183
186
189
192
195
198
201
204
207
210
213
216
219
222
225
228
231
234
237
240
243
246
249
252
255
258
261
264
267
270
273
276
279
282
285
288
291
294
297
300
303
306
309
312
315
318
321
324
327
330
333
336
339
342
345
348
351
354
357
360
363
366
369
372
375
378
381
384
387
390
393
396
399
402
405
408
411
414
417
420
423
426
429
432
435
438
441
444
447
450
453
456
459
462
465
468
471
474
477
480
483
486
489
492
495
498
501
504
507
510
513
516
519
522
525
528
531
534
537
540
543
546
549
552
555
558
561
564
567
570
573
576
579
582
585
588
591
594
597
600
603
606
609
612
615
618
621
624
627
630
633
636
639
642
645
648
651
654
657
660
663
666
669
672
675
678
681
684
687
690
693
696
699
702
705
708
711
714
717
720
723
726
729
732
735
738
741
744
747
750
753
756
759
762
765
768
771
774
77
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:28:06) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

soma = 0

while(r != "X"):
		if (r == "V"):
			soma = soma + 1
			vit = soma * 3
			print(vit)
		if (r == "E"):
			soma = soma + 1
			emp = soma * 1
			print(emp)
-- OUTPUT:
3
6
9
12
15
18
21
24
27
30
33
36
39
42
45
48
51
54
57
60
63
66
69
72
75
78
81
84
87
90
93
96
99
102
105
108
111
114
117
120
123
126
129
132
135
138
141
144
147
150
153
156
159
162
165
168
171
174
177
180
183
186
189
192
195
198
201
204
207
210
213
216
219
222
225
228
231
234
237
240
243
246
249
252
255
258
261
264
267
270
273
276
279
282
285
288
291
294
297
300
303
306
309
312
315
318
321
324
327
330
333
336
339
342
345
348
351
354
357
360
363
366
369
372
375
378
381
384
387
390
393
396
399
402
405
408
411
414
417
420
423
426
429
432
435
438
441
444
447
450
453
456
459
462
465
468
471
474
477
480
483
486
489
492
495
498
501
504
507
510
513
516
519
522
525
528
531
534
537
540
543
546
549
552
555
558
561
564
567
570
573
576
579
582
585
588
591
594
597
600
603
606
609
612
615
618
621
624
627
630
633
636
639
642
645
648
651
654
657
660
663
666
669
672
675
678
681
684
687
690
693
696
699
702
705
708
711
714
717
720
723
726
729
732
735
738
741
744
747
750
753
756
759
762
765
768
771
774
777
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:29:37) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
		if (r == "V"):
			x = x + 1
			vit = x * 3
			print(x)
		if (r == "E"):
			y = y + 1
			emp = y * 1
			print(y)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:14) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
		if (r == "V"):
			x = x + 1
			print(x)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:25) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
		if (r == "V"):
			x = x + 1
			print(x)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:47) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
		if (r == "V"):
			x = x + 1
			print(x)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:59) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
		if (r == "V"):
			x = x + 1
			print(x)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:18) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
		if (r == "V"):
			x = x + 1
			print(x)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:33) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
		if (r == "V"):
			x = x + 1
			print(x)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:33) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
		if (r == "V"):
			x = x + 1
			print(x)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:37:51) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
		x = x + 1
		print(x)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:42:16) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 3
	elif ( r == "D"):
		y = y + 1
	r = input ("resultado V/D/E?: ")
	
	print(x)
	print(y)

-- OUTPUT:
3
0
6
0
6
0
6
0
6
1
6
2
6
2
6
2
6
2
6
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:42:41) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 3
	elif ( r == "D"):
		y = y + 1
	r = input ("resultado V/D/E?: ")
	
	print(x)
	print(y)

-- OUTPUT:
3
0
6
0
6
0
6
0
6
1
6
2
6
2
6
2
6
2
6
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:43:10) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 3
	elif ( r == "D"):
		y = y + 1
	r = input ("resultado V/D/E?: ")
	
	print(x)
	print(y)

-- OUTPUT:
3
0
6
0
6
0
6
0
6
1
6
2
6
2
6
2
6
2
6
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:43:40) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 3
	elif ( r == "E"):
		y = y + 1
	r = input ("resultado V/D/E?: ")
	
	print(x)
	print(y)

-- OUTPUT:
3
0
6
0
6
0
6
1
6
1
6
1
6
1
6
1
6
1
6
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:02) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 3
	elif ( r == "E"):
		y = y + 1
	r = input ("resultado V/D/E?: ")
	
	print(x*3)
	print(y*1)

-- OUTPUT:
9
0
18
0
18
0
18
1
18
1
18
1
18
1
18
1
18
1
18
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:47:01) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 1
	elif ( r == "E"):
		y = y + 1
	
	  
	r = input ("resultado V/D/E?: ")
	
	print(x*3)
	print(y*1)

-- OUTPUT:
3
0
6
0
6
0
6
1
6
1
6
1
6
1
6
1
6
1
6
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:47:22) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 1
	elif ( r == "E"):
		y = y + 1
	
	  
	r = input ("resultado V/D/E?: ")
	
	print(x*3)
	print(y*1)

-- EXECUTION TIME:
0.140437
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
6
2
---- user output:
3
0
6
0
6
0
6
1
6
1
6
1
6
1
6
1
6
1
6
1
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
C
X
---- correct output:
3
1
---- user output:
3
0
3
1
3
1
3
1
3
1
3
1
3
1
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
12
0
---- user output:
0
0
0
0
0
0
0
0
0
0
3
0
6
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:47:26) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 1
	elif ( r == "E"):
		y = y + 1
	
	  
	r = input ("resultado V/D/E?: ")
	
	print(x*3)
	print(y*1)

-- OUTPUT:
3
0
6
0
6
0
6
1
6
1
6
1
6
1
6
1
6
1
6
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:48:03) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	r = input("resultado V/D/E?: ")
	if ( r == "V"):
		x = x + 1
	elif ( r == "E"):
		y = y + 1
	
	
	
	print(x*3)
	print(y*1)

-- OUTPUT:
3
0
3
0
3
1
3
1
3
1
3
1
3
1
3
1
3
1
3
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:48:23) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 1
	elif ( r == "E"):
		y = y + 1
	
	
	
	print(x*3)
	print(y*1)

-- OUTPUT:
3
0
6
0
9
0
12
0
15
0
18
0
21
0
24
0
27
0
30
0
33
0
36
0
39
0
42
0
45
0
48
0
51
0
54
0
57
0
60
0
63
0
66
0
69
0
72
0
75
0
78
0
81
0
84
0
87
0
90
0
93
0
96
0
99
0
102
0
105
0
108
0
111
0
114
0
117
0
120
0
123
0
126
0
129
0
132
0
135
0
138
0
141
0
144
0
147
0
150
0
153
0
156
0
159
0
162
0
165
0
168
0
171
0
174
0
177
0
180
0
183
0
186
0
189
0
192
0
195
0
198
0
201
0
204
0
207
0
210
0
213
0
216
0
219
0
222
0
225
0
228
0
231
0
234
0
237
0
240
0
243
0
246
0
249
0
252
0
255
0
258
0
261
0
264
0
267
0
270
0
273
0
276
0
279
0
282
0
285
0
288
0
291
0
294
0
297
0
300
0
303
0
306
0
309
0
312
0
315
0
318
0
321
0
324
0
327
0
330
0
333
0
336
0
339
0
342
0
345
0
348
0
351
0
354
0
357
0
360
0
363
0
366
0
369
0
372
0
375
0
378
0
381
0
384
0
387
0
390
0
393
0
396
0
399
0
402
0
405
0
408
0
411
0
414
0
417
0
420
0
423
0
426
0
429
0
432
0
435
0
438
0
441
0
444
0
447
0
450
0
453
0
456
0
459
0
462
0
465
0
468
0
471
0
474
0
477
0
480
0
483
0
486
0
489
0
492
0
495
0
498
0
501
0
504
0
507
0
510
0
513
0
516
0
519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:49:29) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 1
		print(x*3)
	elif ( r == "E"):
		y = y + 1
		print(y * 1)
	r = input("resultado V/D/E?: ")
-- OUTPUT:
3
6
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:50:10) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 1
		print(x*3)
	elif ( r == "E"):
		y = y + 1
		print(y * 1)
	r = input("resultado V/D/E?: ")
-- OUTPUT:
3
6
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:51:09) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 1
	
	elif ( r == "E"):
		y = y + 1
		
	r = input("resultado V/D/E?: ")
print(x * 3)
print(y * 1)
-- OUTPUT:
6
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:51:33) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 1
	
	elif ( r == "E"):
		y = y + 1
		
	r = input("resultado V/D/E?: ").upper()

print(x * 3)
print(y * 1)
-- OUTPUT:
6
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:51:41) 
-- CODE:
r = input("resultado V/D/E?: ").upper()

x = 0
y = 0

while(r != "X"):
	if ( r == "V"):
		x = x + 1
	
	elif ( r == "E"):
		y = y + 1
		
	r = input("resultado V/D/E?: ").upper()

print(x * 3)
print(y * 1)
-- EXECUTION TIME:
0.154136
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
6
2
---- user output:
6
2
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
C
X
---- correct output:
3
1
---- user output:
3
1
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
12
0
---- user output:
12
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
